ipc/ipdl/test/ipdl/error/undeclProtocol.ipdl
//error: protocol `undeclared', managed by `undeclProtocol', has not been declared

[ChildProc=any]
protocol undeclProtocol {
    manages undeclared;

child:
    async undeclared();
};
